--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class = "div_texto">
                     <span class = "categoria">Acessorios</span>
                     <h3>Bone Preto</h3>
-                    <span>O gorro Next.js chegou! Esta beldade bordada tem um ajuste confortável que garante que...</span>
+                    <span class = 'card_descricao'>O gorro Next.js chegou! Esta beldade bordada tem um ajuste confortável que garante que...</span>
                     <span class = "card_price">R$100,00</span>
                     <a href="">Adicionar ao carrinho</a>
                 </div>
@@ -39,9 +39,9 @@
                     <img src="Camiseta.png" alt="">
                 </div>
                 <div class = "div_texto">
-                    <span class = "categoria">Camiseta</span>
+                    <span class = "categoria">Camisetas</span>
                     <h3>Lightweight Jacket</h3>
-                    <span>Lorem ipsum Adicione um pouco de energia ao seu guarda-roupa de inverno com esta jaqueta vibrante...</span>
+                    <span class = 'card_descricao'>Adicione um pouco de energia ao seu guarda-roupa de inverno com esta jaqueta vibrante...</span>
                     <span class = "card_price">R$100,00</span>
                     <a href="">Adicionar ao carrinho</a>
                 </div>
@@ -54,7 +54,7 @@
                 <div class = "div_texto">
                     <span class = "categoria">Acessorios</span>
                     <h3>Mask</h3>
-                    <span>Esta máscara facial durável é feita de duas camadas de tecido tratado e possui presilhas...</span>
+                    <span class = 'card_descricao'>Esta máscara facial durável é feita de duas camadas de tecido tratado e possui presilhas...</span>
                     <span class = "card_price">R$100,00</span>
                     <a href="">Adicionar ao carrinho</a>
                 </div>
@@ -62,12 +62,12 @@
             </div>
             <div class = "card_produto">
                 <div class = "div_imagem">
-                    <img src="Gorro.png" alt="">
+                    <img src="Tshirt.png" alt="">
                 </div>
                 <div class = "div_texto">
-                    <span class = "categoria">Acessorios</span>
-                    <h3>Bone Preto</h3>
-                    <span>O gorro Next.js chegou! Esta beldade bordada tem um ajuste confortável que garante que...                </span>
+                    <span class = "categoria">Camisetas</span>
+                    <h3>T-Shirt</h3>
+                    <span class = 'card_descricao'>Esta t-shirt é imprescindível no seu guarda-roupa, combinando o caimento intemporal de...</span>
                     <span class = "card_price">R$100,00</span>
                     <a href="">Adicionar ao carrinho</a>
                 </div>
@@ -75,12 +75,12 @@
             </div>
             <div class = "card_produto">
                 <div class = "div_imagem">
-                    <img src="Gorro.png" alt="">
+                    <img src="CamisaBranca.png" alt="">
                 </div>
                 <div class = "div_texto">
-                    <span class = "categoria">Acessorios</span>
-                    <h3>Bone Preto</h3>
-                    <span>O gorro Next.js chegou! Esta beldade bordada tem um ajuste confortável que garante que...                </span>
+                    <span class = "categoria">Camisetas</span>
+                    <h3>Short-Sleeve T-Shirt</h3>
+                    <span class = 'card_descricao'>Agora você encontrou a camiseta básica do seu guarda-roupa. É feito de um mais grosso...</span>
                     <span class = "card_price">R$100,00</span>
                     <a href="">Adicionar ao carrinho</a>
                 </div>
@@ -88,12 +88,12 @@
             </div>
             <div class = "card_produto">
                 <div class = "div_imagem">
-                    <img src="Gorro.png" alt="">
+                    <img src="Casaco.png" alt="">
                 </div>
                 <div class = "div_texto">
-                    <span class = "categoria">Acessorios</span>
-                    <h3>Bone Preto</h3>
-                    <span>O gorro Next.js chegou! Esta beldade bordada tem um ajuste confortável que garante que...                </span>
+                    <span class = "categoria">Camisetas</span>
+                    <h3>Champion Packable Jacket</h3>
+                    <span class = 'card_descricao'>Proteja-se dos elementos com esta jaqueta embalável Champion. Esta jaqueta de poliést...</span>
                     <span class = "card_price">R$100,00</span>
                     <a href="">Adicionar ao carrinho</a>
                 </div>
@@ -107,14 +107,53 @@
                 <input type="search" name="" id="" placeholder="Pode pesquisar, tem tudo...">
                 <button>Pesquisar</button>
             </section>
+
+  
+
             <section class = "title">
                 <h4>Carrinho de Compras</h4>
             </section>
             <section class = "carrinho_compras">
+
+                <section  class = "produto_carrinho">
+                    <div class = "div_img">
+                        <img src="Camiseta.png" alt="">
+                    </div>
+                    <div class = "descricao">
+                        <h2>Lightweight Jacket</h2>
+                        <span>R$100,00</span><br>
+                        <a href="#">Remover produto</a>
+                    </div>
+                </section>
+                <section  class = "produto_carrinho">
+                    <div class = "div_img">
+                        <img src="Camiseta.png" alt="">
+                    </div>
+                    <div class = "descricao">
+                        <h2>Lightweight Jacket</h2>
+                        <span>R$100,00</span><br>
+                        <a href="#">Remover produto</a>
+                    </div>
+                </section>
+                <section  class = "produto_carrinho">
+                    <div class = "div_img">
+                        <img src="Camiseta.png" alt="">
+                    </div>
+                    <div class = "descricao">
+                        <h2>Lightweight Jacket</h2>
+                        <span>R$100,00</span><br>
+                        <a href="#">Remover produto</a>
+                    </div>
+                </section>
+
                 
-                <h3>Carrinho vazio</h3>
-                <span>Adicione algo</span>
             </section>
+            <section class = "preco_total">
+                <span>Quantidade</span>
+                <span>Total</span>
+            </section>
+
+
         </aside>
     </main>
 </body>
